fix: truncate meme name

--- a/src/client/scss/global/_mixins.scss
+++ b/src/client/scss/global/_mixins.scss
@@ -38,3 +38,10 @@ $screen-xl-min: 1200px;
       @content;
   }
 }
+
+@mixin truncate($truncation-boundary) {
+  max-width: $truncation-boundary;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
